--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "rm -rf node_modules/expo/node_modules/react-native-safe-area-context"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~46.0.8",
+    "expo-app-loading": "^2.1.0",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.1.0",
-    "react-native": "0.70.0",
+    "react-native": "0.69.5",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
