--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "rm -rf node_modules/expo/node_modules/react-native-safe-area-context"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.4",
@@ -22,11 +23,11 @@
     "react": "18.1.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.5",
-    "react-native-reanimated": "~2.9.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
