--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "expo": "~46.0.8",
     "expo-app-loading": "^2.1.0",
     "expo-font": "^10.2.0",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
